@@ -9,7 +9,12 @@
  */
 package com.tonikelope.megabasterd;
 
-import static com.tonikelope.megabasterd.CryptTools.*;
+import org.apache.commons.io.input.QueueInputStream;
+import org.apache.commons.io.output.QueueOutputStream;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
+import javax.crypto.CipherInputStream;
 import java.io.BufferedInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
@@ -20,13 +25,13 @@ import java.net.HttpURLConnection;
 import java.net.InetSocketAddress;
 import java.net.Proxy;
 import java.net.SocketTimeoutException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.channels.Channels;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-import javax.crypto.CipherInputStream;
-import org.apache.commons.io.input.QueueInputStream;
-import org.apache.commons.io.output.QueueOutputStream;
+import java.nio.charset.StandardCharsets;
+
+import static com.tonikelope.megabasterd.CryptTools.forwardMEGALinkKeyIV;
+import static com.tonikelope.megabasterd.CryptTools.genCrypter;
 
 /**
  *
@@ -34,8 +39,9 @@ import org.apache.commons.io.output.QueueOutputStream;
  */
 public class ChunkUploader implements Runnable, SecureSingleThreadNotifiable {
 
+    private static final Logger LOG = LogManager.getLogger(ChunkUploader.class);
+
     public static final int MAX_CHUNK_ERROR = 50;
-    private static final Logger LOG = Logger.getLogger(ChunkUploader.class.getName());
     private final int _id;
     private final Upload _upload;
     private volatile boolean _exit;
@@ -86,7 +92,7 @@ public class ChunkUploader implements Runnable, SecureSingleThreadNotifiable {
                     _secure_notify_lock.wait(1000);
                 } catch (InterruptedException ex) {
                     _exit = true;
-                    LOG.log(Level.SEVERE, ex.getMessage());
+                    LOG.fatal("Sleep interrupted! {}", ex.getMessage());
                 }
             }
 
@@ -113,28 +119,21 @@ public class ChunkUploader implements Runnable, SecureSingleThreadNotifiable {
     @Override
     public void run() {
 
-        LOG.log(Level.INFO, "{0} ChunkUploader {1} hello! {2}", new Object[]{Thread.currentThread().getName(), getId(), _upload.getFile_name()});
+        LOG.info("ChunkUploader {} hello! {}", getId(), _upload.getFile_name());
 
-        long chunk_id = 0;
-
+        long chunk_id;
         byte[] buffer = new byte[MainPanel.DEFAULT_BYTE_BUFFER_SIZE];
-
         byte[] buffer_enc = new byte[MainPanel.DEFAULT_BYTE_BUFFER_SIZE];
-
         boolean fatal_error = false;
-
-        int conta_error = 0;
+        int errorCount = 0;
 
         try {
 
-            while (!_upload.getMain_panel().isExit() && !_exit && !_upload.isStopped() && conta_error < MAX_CHUNK_ERROR && !fatal_error) {
+            while (!_upload.getMain_panel().isExit() && !_exit && !_upload.isStopped() && errorCount < MAX_CHUNK_ERROR && !fatal_error) {
 
                 if (_upload.isPaused() && !_upload.isStopped()) {
-
                     _upload.pause_worker();
-
                     secureWait();
-
                 }
 
                 String worker_url = _upload.getUl_url();
@@ -153,7 +152,7 @@ public class ChunkUploader implements Runnable, SecureSingleThreadNotifiable {
 
                 String chunk_url = ChunkWriterManager.genChunkUrl(worker_url, _upload.getFile_size(), chunk_offset, chunk_size);
 
-                URL url = new URL(chunk_url);
+                URL url = URI.create(chunk_url).toURL();
 
                 HttpURLConnection con;
 
@@ -161,9 +160,9 @@ public class ChunkUploader implements Runnable, SecureSingleThreadNotifiable {
 
                     con = (HttpURLConnection) url.openConnection(new Proxy(Proxy.Type.HTTP, new InetSocketAddress(MainPanel.getProxy_host(), MainPanel.getProxy_port())));
 
-                    if (MainPanel.getProxy_user() != null && !"".equals(MainPanel.getProxy_user())) {
+                    if (MainPanel.getProxy_user() != null && !MainPanel.getProxy_user().isEmpty()) {
 
-                        con.setRequestProperty("Proxy-Authorization", "Basic " + MiscTools.Bin2BASE64((MainPanel.getProxy_user() + ":" + MainPanel.getProxy_pass()).getBytes("UTF-8")));
+                        con.setRequestProperty("Proxy-Authorization", "Basic " + MiscTools.Bin2BASE64((MainPanel.getProxy_user() + ":" + MainPanel.getProxy_pass()).getBytes(StandardCharsets.UTF_8)));
                     }
                 } else {
 
@@ -202,7 +201,7 @@ public class ChunkUploader implements Runnable, SecureSingleThreadNotifiable {
 
                         try (QueueInputStream qis = new QueueInputStream(); QueueOutputStream qos = qis.newQueueOutputStream(); BufferedInputStream bis = new BufferedInputStream(Channels.newInputStream(f.getChannel())); CipherInputStream cis = new CipherInputStream(qis, genCrypter("AES", "AES/CTR/NoPadding", _upload.getByte_file_key(), forwardMEGALinkKeyIV(_upload.getByte_file_iv(), chunk_offset))); OutputStream out = new ThrottledOutputStream(con.getOutputStream(), _upload.getMain_panel().getStream_supervisor())) {
 
-                            LOG.log(Level.INFO, "{0} Uploading chunk {1} from worker {2} {3}...", new Object[]{Thread.currentThread().getName(), chunk_id, _id, _upload.getFile_name()});
+                            LOG.info("Uploading chunk {} from worker {} {}...", chunk_id, _id, _upload.getFile_name());
 
                             while (!_exit && tot_bytes_up < chunk_size && (reads = bis.read(buffer)) != -1) {
 
@@ -240,7 +239,7 @@ public class ChunkUploader implements Runnable, SecureSingleThreadNotifiable {
 
                             if ((http_status = con.getResponseCode()) != 200) {
 
-                                LOG.log(Level.INFO, "{0} Worker {1} Failed : HTTP error code : {2} {3}", new Object[]{Thread.currentThread().getName(), _id, http_status, _upload.getFile_name()});
+                                LOG.info("Worker {} Failed : HTTP error code : {} {}", _id, http_status, _upload.getFile_name());
 
                             } else if (tot_bytes_up == chunk_size || reads == -1) {
 
@@ -249,7 +248,7 @@ public class ChunkUploader implements Runnable, SecureSingleThreadNotifiable {
                                     _upload.getView().getPause_button().setEnabled(false);
                                 }
 
-                                String httpresponse;
+                                String httpResponse;
 
                                 try (InputStream is = con.getInputStream(); ByteArrayOutputStream byte_res = new ByteArrayOutputStream()) {
 
@@ -257,33 +256,22 @@ public class ChunkUploader implements Runnable, SecureSingleThreadNotifiable {
                                         byte_res.write(buffer, 0, reads);
                                     }
 
-                                    httpresponse = new String(byte_res.toByteArray(), "UTF-8");
+                                    httpResponse = byte_res.toString(StandardCharsets.UTF_8);
                                 }
 
-                                if (httpresponse.length() > 0) {
-
-                                    if (MegaAPI.checkMEGAError(httpresponse) != 0) {
-
-                                        LOG.log(Level.WARNING, "{0} Worker {1} UPLOAD FAILED! (MEGA ERROR: {2}) {3}", new Object[]{Thread.currentThread().getName(), _id, MegaAPI.checkMEGAError(httpresponse), _upload.getFile_name()});
-
+                                if (!httpResponse.isEmpty()) {
+                                    if (MegaAPI.checkMEGAError(httpResponse) != 0) {
+                                        LOG.warn("Worker {} UPLOAD FAILED! (MEGA ERROR: {}) {}", _id, MegaAPI.checkMEGAError(httpResponse), _upload.getFile_name());
                                         fatal_error = true;
-
                                     } else {
-
-                                        LOG.log(Level.INFO, "{0} Worker {1} Completion handler -> {2} {3}", new Object[]{Thread.currentThread().getName(), _id, httpresponse, _upload.getFile_name()});
-
-                                        _upload.setCompletion_handler(httpresponse);
-
+                                        LOG.info("Worker {} Completion handler -> {} {}", _id, httpResponse, _upload.getFile_name());
+                                        _upload.setCompletion_handler(httpResponse);
                                         chunk_error = false;
                                     }
-
                                 } else if (_upload.getProgress() != _upload.getFile_size() || _upload.getCompletion_handler() != null) {
-
                                     chunk_error = false;
                                 }
-
                             }
-
                         }
 
                         if (_upload.getMain_panel().isExit()) {
@@ -295,17 +283,16 @@ public class ChunkUploader implements Runnable, SecureSingleThreadNotifiable {
 
                     if (ex instanceof SocketTimeoutException) {
                         timeout = true;
-                        LOG.log(Level.SEVERE, "{0} Worker {1} {2} timeout reading chunk {3}", new Object[]{Thread.currentThread().getName(), _id, _upload.getFile_name(), chunk_id});
-
+                        LOG.fatal("Worker {} {} TIMEOUT reading chunk {}", _id, _upload.getFile_name(), chunk_id);
                     } else {
-                        LOG.log(Level.SEVERE, ex.getMessage());
+                        LOG.fatal("Worker {} {} ERROR reading chunk {}: {}", _id, _upload.getFile_name(), chunk_id, ex.getMessage());
                     }
 
                 } finally {
 
                     if (chunk_error) {
 
-                        LOG.log(Level.WARNING, "{0} Uploading chunk {1} from worker {2} FAILED! {3}...", new Object[]{Thread.currentThread().getName(), chunk_id, _id, _upload.getFile_name()});
+                        LOG.warn("Uploading chunk {} from worker {} FAILED! {}...", chunk_id, _id, _upload.getFile_name());
 
                         _upload.rejectChunkId(chunk_id);
 
@@ -320,13 +307,13 @@ public class ChunkUploader implements Runnable, SecureSingleThreadNotifiable {
 
                             _upload.stopUploader("UPLOAD FAILED: FATAL ERROR");
 
-                            LOG.log(Level.SEVERE, "UPLOAD FAILED: FATAL ERROR {0}", new Object[]{_upload.getFile_name()});
+                            LOG.fatal("UPLOAD FAILED: FATAL ERROR {}", _upload.getFile_name());
 
-                        } else if (++conta_error == MAX_CHUNK_ERROR) {
+                        } else if (++errorCount == MAX_CHUNK_ERROR) {
 
                             _upload.stopUploader("UPLOAD FAILED: too many errors");
 
-                            LOG.log(Level.SEVERE, "UPLOAD FAILED: too many errors {0}", new Object[]{_upload.getFile_name()});
+                            LOG.fatal("UPLOAD FAILED: too many errors {}", _upload.getFile_name());
 
                         } else if (!_exit && !_upload.isStopped() && !timeout) {
 
@@ -335,10 +322,8 @@ public class ChunkUploader implements Runnable, SecureSingleThreadNotifiable {
                             _upload.getView().updateSlotsStatus();
 
                             try {
-                                Thread.sleep(MiscTools.getWaitTimeExpBackOff(conta_error) * 1000);
-                            } catch (InterruptedException exc) {
-
-                            }
+                                Thread.sleep(MiscTools.getWaitTimeExpBackOff(errorCount) * 1000);
+                            } catch (InterruptedException ignored) { }
 
                             _error_wait = false;
 
@@ -347,10 +332,8 @@ public class ChunkUploader implements Runnable, SecureSingleThreadNotifiable {
                         }
 
                     } else {
-
-                        LOG.log(Level.INFO, "{0} Worker {1} has uploaded chunk {2} {3}", new Object[]{Thread.currentThread().getName(), _id, chunk_id, _upload.getFile_name()});
-
-                        conta_error = 0;
+                        LOG.info("Worker {} has uploaded chunk {} {}", _id, chunk_id, _upload.getFile_name());
+                        errorCount = 0;
                     }
 
                     con.disconnect();
@@ -364,14 +347,14 @@ public class ChunkUploader implements Runnable, SecureSingleThreadNotifiable {
 
         } catch (OutOfMemoryError | Exception error) {
             _upload.stopUploader(error.getMessage());
-            LOG.log(Level.SEVERE, error.getMessage());
+            LOG.fatal(error.getMessage());
         }
 
         _upload.stopThisSlot(this);
 
         _upload.getMac_generator().secureNotify();
 
-        LOG.log(Level.INFO, "{0} ChunkUploader [{1}] {2} bye bye...", new Object[]{Thread.currentThread().getName(), _id, _upload.getFile_name()});
+        LOG.info("ChunkUploader [{}] {} bye bye...", _id, _upload.getFile_name());
 
     }
 
