@@ -10,7 +10,18 @@
 package com.tonikelope.megabasterd;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import static com.tonikelope.megabasterd.MiscTools.*;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
+import javax.crypto.BadPaddingException;
+import javax.crypto.Cipher;
+import javax.crypto.IllegalBlockSizeException;
+import javax.crypto.NoSuchPaddingException;
+import javax.crypto.SecretKeyFactory;
+import javax.crypto.spec.IvParameterSpec;
+import javax.crypto.spec.PBEKeySpec;
+import javax.crypto.spec.SecretKeySpec;
+import javax.swing.*;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.InputStream;
@@ -18,8 +29,10 @@ import java.math.BigInteger;
 import java.net.HttpURLConnection;
 import java.net.InetSocketAddress;
 import java.net.Proxy;
+import java.net.URI;
 import java.net.URL;
 import java.nio.ByteBuffer;
+import java.nio.charset.StandardCharsets;
 import java.security.InvalidAlgorithmParameterException;
 import java.security.InvalidKeyException;
 import java.security.KeyFactory;
@@ -32,24 +45,26 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.logging.Level;
-import java.util.logging.Logger;
 import java.util.zip.GZIPInputStream;
-import javax.crypto.BadPaddingException;
-import javax.crypto.Cipher;
-import javax.crypto.IllegalBlockSizeException;
-import javax.crypto.NoSuchPaddingException;
-import javax.crypto.SecretKeyFactory;
-import javax.crypto.spec.IvParameterSpec;
-import javax.crypto.spec.PBEKeySpec;
-import javax.crypto.spec.SecretKeySpec;
-import javax.swing.JOptionPane;
+
+import static com.tonikelope.megabasterd.MiscTools.BASE642Bin;
+import static com.tonikelope.megabasterd.MiscTools.Bin2UrlBASE64;
+import static com.tonikelope.megabasterd.MiscTools.UrlBASE642Bin;
+import static com.tonikelope.megabasterd.MiscTools.bin2i32a;
+import static com.tonikelope.megabasterd.MiscTools.findAllRegex;
+import static com.tonikelope.megabasterd.MiscTools.findFirstRegex;
+import static com.tonikelope.megabasterd.MiscTools.hex2bin;
+import static com.tonikelope.megabasterd.MiscTools.i32a2bin;
+import static com.tonikelope.megabasterd.MiscTools.long2bytearray;
+import static com.tonikelope.megabasterd.MiscTools.recReverseArray;
 
 /**
  *
  * @author tonikelope
  */
 public class CryptTools {
+
+    private static final Logger LOG = LogManager.getLogger(CryptTools.class);
 
     public static final int[] AES_ZERO_IV_I32A = {0, 0, 0, 0};
 
@@ -60,10 +75,9 @@ public class CryptTools {
     public static final int MASTER_PASSWORD_PBKDF2_OUTPUT_BIT_LENGTH = 256;
 
     public static final int MASTER_PASSWORD_PBKDF2_ITERATIONS = 65536;
-    private static final Logger LOG = Logger.getLogger(CryptTools.class.getName());
 
     public static Cipher genDecrypter(String algo, String mode, byte[] key, byte[] iv) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException {
-        SecretKeySpec skeySpec = new SecretKeySpec(key, algo);
+        SecretKeySpec secretKeySpec = new SecretKeySpec(key, algo);
 
         Cipher decryptor = Cipher.getInstance(mode);
 
@@ -71,18 +85,18 @@ public class CryptTools {
 
             IvParameterSpec ivParameterSpec = new IvParameterSpec(iv);
 
-            decryptor.init(Cipher.DECRYPT_MODE, skeySpec, ivParameterSpec);
+            decryptor.init(Cipher.DECRYPT_MODE, secretKeySpec, ivParameterSpec);
 
         } else {
 
-            decryptor.init(Cipher.DECRYPT_MODE, skeySpec);
+            decryptor.init(Cipher.DECRYPT_MODE, secretKeySpec);
         }
 
         return decryptor;
     }
 
     public static Cipher genCrypter(String algo, String mode, byte[] key, byte[] iv) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException {
-        SecretKeySpec skeySpec = new SecretKeySpec(key, algo);
+        SecretKeySpec secretKeySpec = new SecretKeySpec(key, algo);
 
         Cipher cryptor = Cipher.getInstance(mode);
 
@@ -90,17 +104,17 @@ public class CryptTools {
 
             IvParameterSpec ivParameterSpec = new IvParameterSpec(iv);
 
-            cryptor.init(Cipher.ENCRYPT_MODE, skeySpec, ivParameterSpec);
+            cryptor.init(Cipher.ENCRYPT_MODE, secretKeySpec, ivParameterSpec);
 
         } else {
 
-            cryptor.init(Cipher.ENCRYPT_MODE, skeySpec);
+            cryptor.init(Cipher.ENCRYPT_MODE, secretKeySpec);
         }
 
         return cryptor;
     }
 
-    public static byte[] aes_cbc_encrypt_nopadding(byte[] data, byte[] key, byte[] iv) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, IllegalBlockSizeException, BadPaddingException {
+    public static byte[] aes_cbc_encrypt_noPadding(byte[] data, byte[] key, byte[] iv) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, IllegalBlockSizeException, BadPaddingException {
 
         Cipher cryptor = CryptTools.genCrypter("AES", "AES/CBC/NoPadding", key, iv);
 
@@ -114,7 +128,7 @@ public class CryptTools {
         return cryptor.doFinal(data);
     }
 
-    public static byte[] aes_cbc_decrypt_nopadding(byte[] data, byte[] key, byte[] iv) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, IllegalBlockSizeException, BadPaddingException {
+    public static byte[] aes_cbc_decrypt_noPadding(byte[] data, byte[] key, byte[] iv) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, IllegalBlockSizeException, BadPaddingException {
 
         Cipher decryptor = CryptTools.genDecrypter("AES", "AES/CBC/NoPadding", key, iv);
 
@@ -128,14 +142,14 @@ public class CryptTools {
         return decryptor.doFinal(data);
     }
 
-    public static byte[] aes_ecb_encrypt_nopadding(byte[] data, byte[] key) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, IllegalBlockSizeException, BadPaddingException {
+    public static byte[] aes_ecb_encrypt_noPadding(byte[] data, byte[] key) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, IllegalBlockSizeException, BadPaddingException {
 
         Cipher cryptor = CryptTools.genCrypter("AES", "AES/ECB/NoPadding", key, null);
 
         return cryptor.doFinal(data);
     }
 
-    public static byte[] aes_ecb_decrypt_nopadding(byte[] data, byte[] key) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, IllegalBlockSizeException, BadPaddingException {
+    public static byte[] aes_ecb_decrypt_noPadding(byte[] data, byte[] key) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, IllegalBlockSizeException, BadPaddingException {
 
         Cipher decryptor = CryptTools.genDecrypter("AES", "AES/ECB/NoPadding", key, null);
 
@@ -156,14 +170,14 @@ public class CryptTools {
         return decryptor.doFinal(data);
     }
 
-    public static byte[] aes_ctr_encrypt_nopadding(byte[] data, byte[] key, byte[] iv) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, IllegalBlockSizeException, BadPaddingException {
+    public static byte[] aes_ctr_encrypt_noPadding(byte[] data, byte[] key, byte[] iv) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, IllegalBlockSizeException, BadPaddingException {
 
         Cipher cryptor = CryptTools.genCrypter("AES", "AES/CTR/NoPadding", key, iv);
 
         return cryptor.doFinal(data);
     }
 
-    public static byte[] aes_ctr_decrypt_nopadding(byte[] data, byte[] key, byte[] iv) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, IllegalBlockSizeException, BadPaddingException {
+    public static byte[] aes_ctr_decrypt_noPadding(byte[] data, byte[] key, byte[] iv) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, IllegalBlockSizeException, BadPaddingException {
 
         Cipher decryptor = CryptTools.genDecrypter("AES", "AES/CTR/NoPadding", key, iv);
 
@@ -172,12 +186,12 @@ public class CryptTools {
 
     public static int[] aes_cbc_encrypt_ia32(int[] data, int[] key, int[] iv) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, IllegalBlockSizeException, BadPaddingException {
 
-        return bin2i32a(CryptTools.aes_cbc_encrypt_nopadding(i32a2bin(data), i32a2bin(key), i32a2bin(iv)));
+        return bin2i32a(CryptTools.aes_cbc_encrypt_noPadding(i32a2bin(data), i32a2bin(key), i32a2bin(iv)));
     }
 
     public static int[] aes_cbc_decrypt_ia32(int[] data, int[] key, int[] iv) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, IllegalBlockSizeException, BadPaddingException {
 
-        return bin2i32a(CryptTools.aes_cbc_decrypt_nopadding(i32a2bin(data), i32a2bin(key), i32a2bin(iv)));
+        return bin2i32a(CryptTools.aes_cbc_decrypt_noPadding(i32a2bin(data), i32a2bin(key), i32a2bin(iv)));
     }
 
     public static byte[] rsaDecrypt(BigInteger enc_data, BigInteger p, BigInteger q, BigInteger d) throws NoSuchAlgorithmException, InvalidKeySpecException, NoSuchPaddingException, InvalidKeyException, IllegalBlockSizeException, BadPaddingException {
@@ -188,9 +202,9 @@ public class CryptTools {
 
         Cipher cipher = Cipher.getInstance("RSA/ECB/NoPadding");
 
-        RSAPrivateKey privKey = (RSAPrivateKey) factory.generatePrivate(privateSpec);
+        RSAPrivateKey privateKey = (RSAPrivateKey) factory.generatePrivate(privateSpec);
 
-        cipher.init(Cipher.DECRYPT_MODE, privKey);
+        cipher.init(Cipher.DECRYPT_MODE, privateKey);
 
         byte[] enc_data_byte = enc_data.toByteArray();
 
@@ -245,7 +259,7 @@ public class CryptTools {
         return new_iv;
     }
 
-    public static String decryptMegaDownloaderLink(String link) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, Exception, IllegalBlockSizeException, BadPaddingException {
+    public static String decryptMegaDownloaderLink(String link) throws Exception {
         String[] keys = {"6B316F36416C2D316B7A3F217A30357958585858585858585858585858585858", "ED1F4C200B35139806B260563B3D3876F011B4750F3A1A4A5EFD0BBE67554B44"};
         String iv = "79F10A01844A0B27FF5B2D4E0ED3163E";
 
@@ -254,16 +268,11 @@ public class CryptTools {
         if ((enc_type = findFirstRegex("mega://f?(enc[0-9]*)\\?", link, 1)) != null) {
             Cipher decrypter;
 
-            String the_key = null;
-
-            switch (enc_type.toLowerCase()) {
-                case "enc":
-                    the_key = keys[0];
-                    break;
-                case "enc2":
-                    the_key = keys[1];
-                    break;
-            }
+            String the_key = switch (enc_type.toLowerCase()) {
+                case "enc" -> keys[0];
+                case "enc2" -> keys[1];
+                default -> null;
+            };
 
             folder = findFirstRegex("mega://(f)?enc[0-9]*\\?", link, 1);
 
@@ -271,7 +280,7 @@ public class CryptTools {
 
             byte[] decrypted_data = decrypter.doFinal(UrlBASE642Bin(findFirstRegex("mega://f?enc[0-9]*\\?([\\da-zA-Z_,-]*)", link, 1)));
 
-            dec_link = new String(decrypted_data, "UTF-8").trim();
+            dec_link = new String(decrypted_data, StandardCharsets.UTF_8).trim();
 
             return "https://mega.nz/#" + (folder != null ? "f" : "") + dec_link;
 
@@ -333,7 +342,7 @@ public class CryptTools {
 
                 byte[] url_bin = Arrays.copyOfRange(elc_byte, 4 + bin_links_length + 2, 4 + bin_links_length + 2 + url_bin_length);
 
-                if (!new String(url_bin, "UTF-8").contains("http")) {
+                if (!new String(url_bin, StandardCharsets.UTF_8).contains("http")) {
 
                     throw new Exception("BAD ELC HOST URL!");
                 }
@@ -342,15 +351,15 @@ public class CryptTools {
 
                 byte[] pass_bin = Arrays.copyOfRange(elc_byte, 4 + bin_links_length + 2 + url_bin_length + 2, 4 + bin_links_length + 2 + url_bin_length + 2 + pass_bin_length);
 
-                URL url = new URL(new String(url_bin, "UTF-8").trim());
+                URL url = URI.create(new String(url_bin, StandardCharsets.UTF_8).trim()).toURL();
 
                 if (MainPanel.isUse_proxy()) {
 
                     con = (HttpURLConnection) url.openConnection(new Proxy(Proxy.Type.HTTP, new InetSocketAddress(MainPanel.getProxy_host(), MainPanel.getProxy_port())));
 
-                    if (MainPanel.getProxy_user() != null && !"".equals(MainPanel.getProxy_user())) {
+                    if (MainPanel.getProxy_user() != null && !MainPanel.getProxy_user().isEmpty()) {
 
-                        con.setRequestProperty("Proxy-Authorization", "Basic " + MiscTools.Bin2BASE64((MainPanel.getProxy_user() + ":" + MainPanel.getProxy_pass()).getBytes("UTF-8")));
+                        con.setRequestProperty("Proxy-Authorization", "Basic " + MiscTools.Bin2BASE64((MainPanel.getProxy_user() + ":" + MainPanel.getProxy_pass()).getBytes(StandardCharsets.UTF_8)));
                     }
                 } else {
 
@@ -395,9 +404,9 @@ public class CryptTools {
 
                                 dialog.dispose();
 
-                                user = new String(CryptTools.aes_cbc_decrypt_pkcs7(BASE642Bin(elc_account_data.get("user")), main_panel.getMaster_pass(), CryptTools.AES_ZERO_IV), "UTF-8");
+                                user = new String(CryptTools.aes_cbc_decrypt_pkcs7(BASE642Bin(elc_account_data.get("user")), main_panel.getMaster_pass(), CryptTools.AES_ZERO_IV), StandardCharsets.UTF_8);
 
-                                api_key = new String(CryptTools.aes_cbc_decrypt_pkcs7(BASE642Bin(elc_account_data.get("apikey")), main_panel.getMaster_pass(), CryptTools.AES_ZERO_IV), "UTF-8");
+                                api_key = new String(CryptTools.aes_cbc_decrypt_pkcs7(BASE642Bin(elc_account_data.get("apikey")), main_panel.getMaster_pass(), CryptTools.AES_ZERO_IV), StandardCharsets.UTF_8);
 
                                 if (!remember_master_pass) {
 
@@ -413,9 +422,9 @@ public class CryptTools {
 
                         } else {
 
-                            user = new String(CryptTools.aes_cbc_decrypt_pkcs7(BASE642Bin(elc_account_data.get("user")), main_panel.getMaster_pass(), CryptTools.AES_ZERO_IV), "UTF-8");
+                            user = new String(CryptTools.aes_cbc_decrypt_pkcs7(BASE642Bin(elc_account_data.get("user")), main_panel.getMaster_pass(), CryptTools.AES_ZERO_IV), StandardCharsets.UTF_8);
 
-                            api_key = new String(CryptTools.aes_cbc_decrypt_pkcs7(BASE642Bin(elc_account_data.get("apikey")), main_panel.getMaster_pass(), CryptTools.AES_ZERO_IV), "UTF-8");
+                            api_key = new String(CryptTools.aes_cbc_decrypt_pkcs7(BASE642Bin(elc_account_data.get("apikey")), main_panel.getMaster_pass(), CryptTools.AES_ZERO_IV), StandardCharsets.UTF_8);
 
                         }
 
@@ -431,9 +440,9 @@ public class CryptTools {
                     throw new Exception("NO valid ELC account available!");
                 }
 
-                String postdata = "OPERATION_TYPE=D&DATA=" + new String(pass_bin, "UTF-8") + "&USER=" + user + "&APIKEY=" + api_key;
+                String postData = "OPERATION_TYPE=D&DATA=" + new String(pass_bin, StandardCharsets.UTF_8) + "&USER=" + user + "&APIKEY=" + api_key;
 
-                con.getOutputStream().write(postdata.getBytes("UTF-8"));
+                con.getOutputStream().write(postData.getBytes(StandardCharsets.UTF_8));
 
                 con.getOutputStream().close();
 
@@ -450,11 +459,11 @@ public class CryptTools {
 
                     ObjectMapper objectMapper = new ObjectMapper();
 
-                    HashMap res_map = objectMapper.readValue(new String(out.toByteArray(), "UTF-8"), HashMap.class);
+                    HashMap res_map = objectMapper.readValue(out.toString(StandardCharsets.UTF_8), HashMap.class);
 
                     String dec_pass = (String) res_map.get("d");
 
-                    if (dec_pass != null && dec_pass.length() > 0) {
+                    if (dec_pass != null && !dec_pass.isEmpty()) {
 
                         dec_pass = (String) res_map.get("d");
 
@@ -468,9 +477,9 @@ public class CryptTools {
 
                         System.arraycopy(pass_dec_byte, 16, iv, 0, 8);
 
-                        byte[] bin_links_dec = CryptTools.aes_cbc_decrypt_nopadding(bin_links, key, iv);
+                        byte[] bin_links_dec = CryptTools.aes_cbc_decrypt_noPadding(bin_links, key, iv);
 
-                        String[] links_string = (new String(bin_links_dec, "UTF-8").trim()).split("\\|");
+                        String[] links_string = (new String(bin_links_dec, StandardCharsets.UTF_8).trim()).split("\\|");
 
                         for (String s : links_string) {
 
@@ -478,20 +487,15 @@ public class CryptTools {
                         }
 
                     } else {
-                        throw new Exception(url.getAuthority() + " ELC SERVER ERROR " + new String(out.toByteArray(), "UTF-8"));
+                        throw new Exception(url.getAuthority() + " ELC SERVER ERROR " + out.toString(StandardCharsets.UTF_8));
                     }
-
                 }
-
             } catch (Exception ex) {
-                Logger.getLogger(CryptTools.class.getName()).log(Level.SEVERE, ex.getMessage());
+                LOG.fatal("Failed to decrypt ELC! {}", ex.getMessage());
                 JOptionPane.showMessageDialog(main_panel.getView(), ex.getMessage(), "ELC ERROR", JOptionPane.ERROR_MESSAGE);
             } finally {
-                if (con != null) {
-                    con.disconnect();
-                }
+                if (con != null) con.disconnect();
             }
-
         }
 
         return links;
@@ -515,15 +519,15 @@ public class CryptTools {
 
         try {
 
-            URL url = new URL(dlc_url);
+            URL url = URI.create(dlc_url).toURL();
 
             if (MainPanel.isUse_proxy()) {
 
                 con = (HttpURLConnection) url.openConnection(new Proxy(Proxy.Type.HTTP, new InetSocketAddress(MainPanel.getProxy_host(), MainPanel.getProxy_port())));
 
-                if (MainPanel.getProxy_user() != null && !"".equals(MainPanel.getProxy_user())) {
+                if (MainPanel.getProxy_user() != null && !MainPanel.getProxy_user().isEmpty()) {
 
-                    con.setRequestProperty("Proxy-Authorization", "Basic " + MiscTools.Bin2BASE64((MainPanel.getProxy_user() + ":" + MainPanel.getProxy_pass()).getBytes("UTF-8")));
+                    con.setRequestProperty("Proxy-Authorization", "Basic " + MiscTools.Bin2BASE64((MainPanel.getProxy_user() + ":" + MainPanel.getProxy_pass()).getBytes(StandardCharsets.UTF_8)));
                 }
             } else {
 
@@ -550,9 +554,9 @@ public class CryptTools {
 
             con.setRequestProperty("rev", dlc_rev);
 
-            String postdata = "destType=jdtc6&b=JD&srcType=dlc&data=" + dlc_id + "&v=" + dlc_rev;
+            String postData = "destType=jdtc6&b=JD&srcType=dlc&data=" + dlc_id + "&v=" + dlc_rev;
 
-            con.getOutputStream().write(postdata.getBytes("UTF-8"));
+            con.getOutputStream().write(postData.getBytes(StandardCharsets.UTF_8));
 
             con.getOutputStream().close();
 
@@ -565,14 +569,14 @@ public class CryptTools {
 
                     out.write(buffer, 0, reads);
                 }
-                enc_dlc_key = findFirstRegex("< *rc *>(.+?)< */ *rc *>", new String(out.toByteArray(), "UTF-8"), 1);
+                enc_dlc_key = findFirstRegex("< *rc *>(.+?)< */ *rc *>", out.toString(StandardCharsets.UTF_8), 1);
             }
 
-            String dec_dlc_key = new String(CryptTools.aes_ecb_decrypt_nopadding(BASE642Bin(enc_dlc_key), hex2bin(dlc_master_key)), "UTF-8").trim();
+            String dec_dlc_key = new String(CryptTools.aes_ecb_decrypt_noPadding(BASE642Bin(enc_dlc_key), hex2bin(dlc_master_key)), StandardCharsets.UTF_8).trim();
 
-            String dec_dlc_data = new String(CryptTools.aes_cbc_decrypt_nopadding(BASE642Bin(enc_dlc_data), BASE642Bin(dec_dlc_key), BASE642Bin(dec_dlc_key)), "UTF-8").trim();
+            String dec_dlc_data = new String(CryptTools.aes_cbc_decrypt_noPadding(BASE642Bin(enc_dlc_data), BASE642Bin(dec_dlc_key), BASE642Bin(dec_dlc_key)), StandardCharsets.UTF_8).trim();
 
-            ArrayList<String> files = findAllRegex("< *file *>(.+?)< */ *file *>", new String(BASE642Bin(dec_dlc_data), "UTF-8"), 1);
+            ArrayList<String> files = findAllRegex("< *file *>(.+?)< */ *file *>", new String(BASE642Bin(dec_dlc_data), StandardCharsets.UTF_8), 1);
 
             for (String f : files) {
 
@@ -580,13 +584,13 @@ public class CryptTools {
 
                 for (String s : urls) {
 
-                    links.add(new String(BASE642Bin(s), "UTF-8"));
+                    links.add(new String(BASE642Bin(s), StandardCharsets.UTF_8));
                 }
             }
 
         } catch (Exception ex) {
 
-            Logger.getLogger(CryptTools.class.getName()).log(Level.SEVERE, ex.getMessage());
+            LOG.fatal("Failed to decrypt DLC! {}", ex.getMessage());
 
             JOptionPane.showMessageDialog(main_panel.getView(), ex.getMessage(), "DLC ERROR", JOptionPane.ERROR_MESSAGE);
         } finally {
@@ -598,7 +602,7 @@ public class CryptTools {
         return links;
     }
 
-    public static String MEGAUserHash(byte[] str, int[] aeskey) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, IllegalBlockSizeException, BadPaddingException, Exception {
+    public static String MEGAUserHash(byte[] str, int[] aesKey) throws Exception {
 
         int[] s32 = bin2i32a(str);
 
@@ -613,7 +617,7 @@ public class CryptTools {
 
         for (int i = 0; i < 0x4000; i++) {
 
-            h32 = CryptTools.aes_cbc_encrypt_ia32(h32, aeskey, iv);
+            h32 = CryptTools.aes_cbc_encrypt_ia32(h32, aesKey, iv);
         }
 
         int[] res = {h32[0], h32[2]};
@@ -648,7 +652,7 @@ public class CryptTools {
         return pkey;
     }
 
-    public static byte[] PBKDF2HMACSHA256(String password, byte[] salt, int iterations, int output_length) throws NoSuchAlgorithmException, InvalidKeySpecException {
+    public static byte[] PBKDF2_HMAC_SHA256(String password, byte[] salt, int iterations, int output_length) throws NoSuchAlgorithmException, InvalidKeySpecException {
 
         SecretKeyFactory f = SecretKeyFactory.getInstance("PBKDF2WithHmacSHA256");
 
@@ -657,7 +661,7 @@ public class CryptTools {
         return f.generateSecret(ks).getEncoded();
     }
 
-    public static byte[] PBKDF2HMACSHA512(String password, byte[] salt, int iterations, int output_length) throws NoSuchAlgorithmException, InvalidKeySpecException {
+    public static byte[] PBKDF2_HMAC_SHA512(String password, byte[] salt, int iterations, int output_length) throws NoSuchAlgorithmException, InvalidKeySpecException {
 
         SecretKeyFactory f = SecretKeyFactory.getInstance("PBKDF2WithHmacSHA512");
 
