@@ -10,26 +10,37 @@
 package com.tonikelope.megabasterd;
 
 import com.fasterxml.jackson.core.JsonParser;
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import static com.tonikelope.megabasterd.CryptTools.*;
-import static com.tonikelope.megabasterd.MiscTools.*;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
+import javax.crypto.Cipher;
+import javax.swing.*;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.InetSocketAddress;
-import java.net.MalformedURLException;
 import java.net.Proxy;
+import java.net.URI;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.Set;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-import javax.crypto.Cipher;
-import javax.swing.JOptionPane;
+
+import static com.tonikelope.megabasterd.CryptTools.PBKDF2_HMAC_SHA256;
+import static com.tonikelope.megabasterd.CryptTools.aes_cbc_decrypt_pkcs7;
+import static com.tonikelope.megabasterd.CryptTools.genDecrypter;
+import static com.tonikelope.megabasterd.MiscTools.BASE642Bin;
+import static com.tonikelope.megabasterd.MiscTools.Bin2BASE64;
+import static com.tonikelope.megabasterd.MiscTools.Bin2UrlBASE64;
+import static com.tonikelope.megabasterd.MiscTools.cleanFilePath;
+import static com.tonikelope.megabasterd.MiscTools.cleanFilename;
+import static com.tonikelope.megabasterd.MiscTools.findFirstRegex;
 
 /**
  *
@@ -37,9 +48,10 @@ import javax.swing.JOptionPane;
  */
 public class MegaCrypterAPI {
 
+    private static final Logger LOG = LogManager.getLogger(MegaCrypterAPI.class);
+
     public static final Set<String> PASS_CACHE = new HashSet<>();
     public static final Object PASS_LOCK = new Object();
-    private static final Logger LOG = Logger.getLogger(MegaCrypterAPI.class.getName());
 
     private static String _rawRequest(String request, URL url_api) throws MegaCrypterAPIException {
 
@@ -53,9 +65,9 @@ public class MegaCrypterAPI {
 
                 con = (HttpURLConnection) url_api.openConnection(new Proxy(Proxy.Type.HTTP, new InetSocketAddress(MainPanel.getProxy_host(), MainPanel.getProxy_port())));
 
-                if (MainPanel.getProxy_user() != null && !"".equals(MainPanel.getProxy_user())) {
+                if (MainPanel.getProxy_user() != null && !MainPanel.getProxy_user().isEmpty()) {
 
-                    con.setRequestProperty("Proxy-Authorization", "Basic " + MiscTools.Bin2BASE64((MainPanel.getProxy_user() + ":" + MainPanel.getProxy_pass()).getBytes("UTF-8")));
+                    con.setRequestProperty("Proxy-Authorization", "Basic " + MiscTools.Bin2BASE64((MainPanel.getProxy_user() + ":" + MainPanel.getProxy_pass()).getBytes(StandardCharsets.UTF_8)));
                 }
             } else {
 
@@ -63,22 +75,15 @@ public class MegaCrypterAPI {
             }
 
             con.setRequestProperty("Content-type", "application/json");
-
             con.setUseCaches(false);
-
             con.setRequestProperty("User-Agent", MainPanel.DEFAULT_USER_AGENT);
-
             con.setRequestMethod("POST");
-
             con.setDoOutput(true);
-
-            con.getOutputStream().write(request.getBytes("UTF-8"));
-
+            con.getOutputStream().write(request.getBytes(StandardCharsets.UTF_8));
             con.getOutputStream().close();
 
             if (con.getResponseCode() != 200) {
-                Logger.getLogger(MegaCrypterAPI.class.getName()).log(Level.INFO, "{0} Failed : HTTP error code : {1}", new Object[]{Thread.currentThread().getName(), con.getResponseCode()});
-
+                LOG.info("Failed : HTTP error code : {}", con.getResponseCode());
             } else {
 
                 try (InputStream is = con.getInputStream(); ByteArrayOutputStream byte_res = new ByteArrayOutputStream()) {
@@ -88,13 +93,11 @@ public class MegaCrypterAPI {
                     int reads;
 
                     while ((reads = is.read(buffer)) != -1) {
-
                         byte_res.write(buffer, 0, reads);
                     }
 
-                    response = new String(byte_res.toByteArray(), "UTF-8");
-
-                    if (response.length() > 0) {
+                    response = byte_res.toString(StandardCharsets.UTF_8);
+                    if (!response.isEmpty()) {
 
                         int mc_error;
 
@@ -107,55 +110,51 @@ public class MegaCrypterAPI {
             }
 
         } catch (IOException ex) {
-            Logger.getLogger(MegaCrypterAPI.class.getName()).log(Level.SEVERE, ex.getMessage());
+            LOG.fatal("IO Exception in _rawRequest! {}", ex.getMessage());
         } finally {
-
-            if (con != null) {
-                con.disconnect();
-            }
+            if (con != null) con.disconnect();
         }
 
         return response;
-
     }
 
     public static String getMegaFileDownloadUrl(String link, String pass_hash, String noexpire_token, String sid, String reverse) throws IOException, MegaCrypterAPIException {
         String request = "{\"m\":\"dl\", \"link\": \"" + link + "\"" + (noexpire_token != null ? ", \"noexpire\": \"" + noexpire_token + "\"" : "") + (sid != null ? ", \"sid\": \"" + sid + "\"" : "") + (reverse != null ? ", \"reverse\": \"" + reverse + "\"" : "") + "}";
 
-        URL url_api = new URL(findFirstRegex("https?://[^/]+", link, 0) + "/api");
+        URL url_api = URI.create(findFirstRegex("https?://[^/]+", link, 0) + "/api").toURL();
 
         String res = MegaCrypterAPI._rawRequest(request, url_api);
 
         ObjectMapper objectMapper = new ObjectMapper();
 
-        HashMap res_map = objectMapper.readValue(res, HashMap.class);
+        HashMap<String, String> res_map = objectMapper.readValue(res, new TypeReference<>() {});
 
-        String dl_url = (String) res_map.get("url");
+        String dl_url = res_map.get("url");
 
         if (pass_hash != null) {
             try {
-                String pass = (String) res_map.get("pass");
+                String pass = res_map.get("pass");
 
                 byte[] decrypted_url = aes_cbc_decrypt_pkcs7(BASE642Bin(dl_url), BASE642Bin(pass_hash), BASE642Bin(pass));
 
-                dl_url = new String(decrypted_url, "UTF-8");
+                dl_url = new String(decrypted_url, StandardCharsets.UTF_8);
 
             } catch (Exception ex) {
                 throw new MegaCrypterAPIException(25);
             }
         }
 
-        if (dl_url == null || "".equals(dl_url)) {
+        if (dl_url == null || dl_url.isEmpty()) {
             throw new MegaCrypterAPIException(-101);
         }
 
         return dl_url;
     }
 
-    public static String[] getMegaFileMetadata(String link, MainPanelView panel, String reverse) throws MegaCrypterAPIException, MalformedURLException, IOException {
+    public static String[] getMegaFileMetadata(String link, MainPanelView panel, String reverse) throws MegaCrypterAPIException, IOException {
         String request = "{\"m\":\"info\", \"link\": \"" + link + "\"" + (reverse != null ? ", \"reverse\": \"" + reverse + "\"" : "") + "}";
 
-        URL url_api = new URL(findFirstRegex("https?://[^/]+", link, 0) + "/api");
+        URL url_api = URI.create(findFirstRegex("https?://[^/]+", link, 0) + "/api").toURL();
 
         String res = MegaCrypterAPI._rawRequest(request, url_api);
 
@@ -165,21 +164,16 @@ public class MegaCrypterAPI {
 
         objectMapper.configure(JsonParser.Feature.ALLOW_BACKSLASH_ESCAPING_ANY_CHARACTER, true);
 
-        HashMap res_map = objectMapper.readValue(res, HashMap.class);
+        HashMap<String, String> res_map = objectMapper.readValue(res, new TypeReference<>() {});
 
-        String fname = cleanFilename((String) res_map.get("name"));
+        String fname = cleanFilename(res_map.get("name"));
 
         String fpath = null;
 
-        Object fpath_val = res_map.get("path");
+        String filePath_val = res_map.getOrDefault("path", null);
 
-        if (fpath_val instanceof Boolean) {
-
-            fpath = null;
-
-        } else if (fpath_val instanceof String) {
-
-            fpath = cleanFilePath((String) fpath_val);
+        if (filePath_val != null) {
+            fpath = cleanFilePath(filePath_val);
         }
 
         String file_size;
@@ -193,34 +187,23 @@ public class MegaCrypterAPI {
             file_size = String.valueOf(res_map.get("size"));
         }
 
-        String fkey = (String) res_map.get("key");
+        String fkey = res_map.get("key");
 
         String noexpire_token = null;
 
-        Object expire_val = res_map.get("expire");
+        String expire_val = res_map.getOrDefault("expire", null);
 
-        if (expire_val instanceof Boolean) {
-
-            noexpire_token = null;
-
-        } else if (expire_val instanceof String) {
-
-            String aux[] = ((String) expire_val).split("#");
-
+        if (expire_val != null) {
+            String[] aux = (expire_val).split("#");
             noexpire_token = aux[1];
         }
 
-        Object pass_val = res_map.get("pass");
+        String pass_val = res_map.getOrDefault("pass", null);
 
         String pass = null;
 
-        if (pass_val instanceof Boolean) {
-
-            pass = null;
-
-        } else if (pass_val instanceof String) {
-
-            pass = (String) pass_val;
+        if (pass_val != null) {
+            pass = pass_val;
         }
 
         if (pass != null) {
@@ -248,7 +231,7 @@ public class MegaCrypterAPI {
 
             synchronized (PASS_LOCK) {
 
-                LinkedList<String> pass_list = new LinkedList(PASS_CACHE);
+                LinkedList<String> pass_list = new LinkedList<>(PASS_CACHE);
 
                 do {
                     bad_pass = true;
@@ -262,7 +245,7 @@ public class MegaCrypterAPI {
 
                         try {
 
-                            info_key = PBKDF2HMACSHA256(password, salt, (int) Math.pow(2, iterations), 256);
+                            info_key = PBKDF2_HMAC_SHA256(password, salt, (int) Math.pow(2, iterations), 256);
 
                             decrypter = genDecrypter("AES", "AES/CBC/PKCS5Padding", info_key, iv);
 
@@ -300,12 +283,12 @@ public class MegaCrypterAPI {
 
                     byte[] decrypted_name = decrypter.doFinal(BASE642Bin(fname));
 
-                    fname = new String(decrypted_name, "UTF-8");
+                    fname = new String(decrypted_name, StandardCharsets.UTF_8);
 
                     if (fpath != null) {
-                        byte[] decrypted_fpath = decrypter.doFinal(BASE642Bin(fpath));
+                        byte[] decryptedFilePath = decrypter.doFinal(BASE642Bin(fpath));
 
-                        fpath = new String(decrypted_fpath, "UTF-8");
+                        fpath = new String(decryptedFilePath, StandardCharsets.UTF_8);
                     }
 
                     pass = Bin2BASE64(info_key);
@@ -322,9 +305,7 @@ public class MegaCrypterAPI {
             fname = fpath + fname;
         }
 
-        String file_data[] = {fname, file_size, fkey, pass, noexpire_token};
-
-        return file_data;
+        return new String[]{fname, file_size, fkey, pass, noexpire_token};
     }
 
     private static int checkMCError(String data) {
